--- a/index.css
+++ b/index.css
@@ -72,7 +72,7 @@ ul{
     font-weight: 300;
     color:#bbbbbb;
     display: block;
-    transition: all 0.5s ease;
+    transition: all 0.2s ease;
     margin: 20px;
     
 }
@@ -80,4 +80,8 @@ ul{
     color:#ffffff;
     padding-left:10px;
 
+}
+#priyanshu{
+color:rgb(150, 150, 206);
+text-transform: capitalize;
 }
